--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.1",
     "vue": "~2.3.4",
+    "vue-auth": "^1.0.0-alpha.1",
+    "vue-axios": "^2.0.2",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
