--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
     "lawnchair": "^0.6.4",
+    "lodash": "^4.17.4",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.1",
     "vue": "~2.3.4",
     "vue-animate": "0.0.4",
     "vue-auth": "^1.0.0-alpha.1",
     "vue-axios": "^2.0.2",
+    "vue-lodash": "^1.0.4",
     "vue-router": "^2.7.0",
     "vue-scrollto": "^2.7.8"
   },
