--- a/cordova/package.json
+++ b/cordova/package.json
@@ -14,6 +14,7 @@
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
+        "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-whitelist": "^1.3.2"
     },
     "cordova": {
@@ -26,7 +27,8 @@
                 "XWALK_MODE": "embedded",
                 "XWALK_MULTIPLEAPK": "true"
             },
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android"
