--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
+    "blob-util": "^1.3.0",
     "lawnchair": "^0.6.4",
     "lodash": "^4.17.4",
     "quasar-extras": "0.x",
