--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "blob-util": "^1.3.0",
     "lawnchair": "^0.6.4",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.1",
     "vue": "~2.3.4",
@@ -22,6 +23,7 @@
     "vue-auth": "^1.0.0-alpha.1",
     "vue-axios": "^2.0.2",
     "vue-lodash": "^1.0.4",
+    "vue-momentjs": "^0.1.1",
     "vue-router": "^2.7.0",
     "vue-scrollto": "^2.7.8"
   },
