--- a/cordova/package.json
+++ b/cordova/package.json
@@ -10,9 +10,10 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "^6.2.3",
+        "cordova-android": "^6.3.0",
+        "cordova-fabric-plugin": "^1.1.9",
         "cordova-plugin-camera": "^2.4.1",
-        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-whitelist": "^1.3.2"
