--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "quasar-extras": "0.x",
-    "quasar-framework": "^0.14.4",
-    "vue": "~2.3.4",
+    "quasar-framework": "^0.14.7",
+    "vue": "^2.5.3",
     "vue-animate": "0.0.4",
     "vue-auth": "^1.0.0-alpha.1",
     "vue-axios": "^2.0.2",
     "vue-lodash": "^1.0.4",
     "vue-momentjs": "^0.1.1",
     "vue-router": "^2.7.0",
-    "vue-scrollto": "^2.7.8"
+    "vue-scrollto": "^2.7.8",
+    "vue-template-compiler": "^2.5.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
