--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "node build/script.clean.js",
     "dev": "node build/script.dev.js",
+    "e2e": "node test/e2e/runner.js",
     "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.vue src"
   },
@@ -30,12 +31,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "axios-mock-adapter": "^1.10.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
+    "chromedriver": "^2.27.2",
     "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.28.0",
@@ -58,11 +61,13 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.0",
     "json-loader": "^0.5.7",
+    "nightwatch": "^0.9.12",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
     "postcss-loader": "^1.0.0",
     "progress-bar-webpack-plugin": "^1.10.0",
     "purify-css": "^1.2.6",
+    "selenium-server": "^3.0.1",
     "shelljs": "^0.7.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -72,6 +77,7 @@
     "vue-template-compiler": "~2.3.4",
     "webpack": "^3.5.2",
     "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.9.1",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0"
   }
